# ChangeLog for net-libs/xulrunner
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/ChangeLog,v 1.177 2009/01/08 07:10:59 gengor Exp $

  08 Jan 2009; Gordon Malm <gengor@gentoo.org> xulrunner-1.8.1.19.ebuild:
  Only necessary to filter-flags stack-protector, it does append-flags safely.

  30 Dec 2008; Gordon Malm <gengor@gentoo.org> xulrunner-1.9.0.5.ebuild:
  Add back filtering of stack-protector for <gcc-4 on amd64, bug #252459

  27 Dec 2008; Brent Baude <ranger@gentoo.org> xulrunner-1.9.0.5.ebuild:
  Marking xulrunner-1.9.0.5 ppc64 and ppc for bug 234606

  26 Dec 2008; Jeroen Roovers <jer@gentoo.org> xulrunner-1.9.0.5.ebuild:
  Stable for HPPA (bug #234646). Fix whitespace.

  24 Dec 2008; Raúl Porcel <armin76@gentoo.org> xulrunner-1.9.0.5.ebuild:
  Add missing workaround for alpha

  24 Dec 2008; Raúl Porcel <armin76@gentoo.org> xulrunner-1.9.0.5.ebuild:
  alpha/arm/ia64 stable wrt #234646

  23 Dec 2008; Markus Meier <maekke@gentoo.org> xulrunner-1.9.0.5.ebuild:
  amd64/x86 stable, bug #234646

  23 Dec 2008; Raúl Porcel <armin76@gentoo.org> xulrunner-1.9.0.5.ebuild:
  Fix SRC_URI

  23 Dec 2008; Olivier Crête <tester@gentoo.org> xulrunner-1.9.0.5.ebuild:
  Removing amd64 keyword, there is a file missing

  22 Dec 2008; Olivier Crête <tester@gentoo.org> xulrunner-1.9.0.5.ebuild:
  Stable on amd64, bug #234646

  22 Dec 2008; Raúl Porcel <armin76@gentoo.org> xulrunner-1.9.0.5.ebuild:
  New patchset for bug #251818 and remove some hardened stuff not needed
  anymore, bug #251471

  22 Dec 2008; Raúl Porcel <armin76@gentoo.org>
  -xulrunner-1.8.1.18-r1.ebuild, xulrunner-1.8.1.19.ebuild,
  -xulrunner-1.9.0.4-r1.ebuild:
  alpha/arm/ia64/sparc stable wrt #251322

  22 Dec 2008; Brent Baude <ranger@gentoo.org> xulrunner-1.8.1.19.ebuild:
  Marking xulrunner-1.8.1.19 ppc for bug 251322

  21 Dec 2008; Brent Baude <ranger@gentoo.org> ChangeLog: