@@ -4,6 +4,6 @@ DIST xulrunner-1.8.1.19-source.tar.bz2 38110248 RMD160 2b742243c6370a2790f48d2ce
 DIST xulrunner-1.9.0.5-patches-0.1.tar.bz2 6659 RMD160 6b77cd5f96e9b7c1eab7abd1d781853c425db6e2 SHA1 5b6d7e87a08dd779daf685a0516d149f4f83a071 SHA256 94c38808d4722fb5fe480af80cd88e4095a52fa82ffb6f0ea550f5decc780b4a
 DIST xulrunner-1.9.0.5.tar.bz2 34098825 RMD160 7bb4b42c9277ed1d16ebf40eac1e480664f999bf SHA1 f980f54d4ce5dd1e763eb41f9379c4e9729c066b SHA256 7d8c1f6338402fff99936d67b38fca21ce2099a7c9fdb0be91fdd3adbaf8742f
 EBUILD xulrunner-1.8.1.19.ebuild 5031 RMD160 571ccbbb03ab08eaa0b05b108f11babd313a91cc SHA1 ed94e0d62bcc6696c755171a31edb1ea1ec98528 SHA256 9dce1077eed8a173aa0f6f317bd3b735458530d090f7bff377be352cc66a01e1
-EBUILD xulrunner-1.9.0.5.ebuild 5025 RMD160 2f1977bd7ad121a5dddd77958440c2904025fa80 SHA1 db786b7444a906478d17e7b91bd268efea0983ec SHA256 6efdac95d536a802a41d9da8ed481f166b9626aadabeb3cb5b5846840d063ea5
-MISC ChangeLog 22708 RMD160 c93b939fe7d9fd66de596e7b7c9b0aadbfd15e1f SHA1 67427d4265d7e1799f1a1f7c71bd37dc29516a1c SHA256 86f2a38c297b18e5239ef0d29ac5a3a935c86bece1a0cba9bb7a3ca3468ba659
+EBUILD xulrunner-1.9.0.5.ebuild 4978 RMD160 d3c713b9ef757e4bedfc9a62b11bd10174540a98 SHA1 e3cc6788c01b4848903c40fbaf68d88597f79e48 SHA256 2a1b31ccb97dac8067a20e34ad15d29d8c0af9a2ee31db64676ebb7b21182aeb
+MISC ChangeLog 22860 RMD160 b1d1f3ac84a1dac96d5118ae8840bb3d0c6f191a SHA1 aed4d2ffaff16ae0799402b71ce112ba8e7a605e SHA256 dc1727dba72ff97fddd1628674bd704b1544867e1f656aa7ee4825617e5211af
 MISC metadata.xml 263 RMD160 9ed9d79d17d0a991e88c31ae6342996519ffef5b SHA1 0de183203298ce0f1c2ecc3fc8149842c4a0ec60 SHA256 64bfc93c4ab02ef2fe9b61b8157eb722d6cca5d552eecc18eaaf8e95980d2550
