@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/xulrunner
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/ChangeLog,v 1.177 2009/01/08 07:10:59 gengor Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/ChangeLog,v 1.178 2009/01/21 06:34:50 gengor Exp $
+
+  21 Jan 2009; Gordon Malm <gengor@gentoo.org> xulrunner-1.9.0.5.ebuild:
+  Append fno-stack-protector on all ARCHes for CXX only. Bugs 253639, 253737.
 
   08 Jan 2009; Gordon Malm <gengor@gentoo.org> xulrunner-1.8.1.19.ebuild:
   Only necessary to filter-flags stack-protector, it does append-flags safely.
